fixed bug adding a new element and sorting the RHS list. need to autofocus on the hrs element when mousing over a range in the text. some weird behaviour with airlock div and the rhs floating, airlock z index overlaps RHS and cannot click on buttons on annotation lists

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,10 @@ body {
   //background: black;
 }
 
+#airlock {
+  max-width: 600px;
+}
+
 .highlightTextActive {
   background: rgba(0, 255, 23, 0.55);
 }
